# sshine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/en/: backups.md  installation.md  listing.md  readme.md  reference.md  servers.md  storage.md  templates.md
docs/ru/: backups.md  installation.md  listing.md  readme.md  reference.md  servers.md  storage.md  templates.md
scripts/: install-build.ps1  install-build.sh  install-prerelease.ps1  install-prerelease.sh  install-release.ps1  install-release.sh
src/sshine/: __main__.py  const.py  exceptions.py
src/sshine/cli/: app.py  backup_cmd.py  connect_cmd.py  init_cmd.py  list_cmd.py  server_cmd.py  storage_cmd.py  template_cmd.py  utils.py
src/sshine/contrib/beszel/: __init__.py
src/sshine/contrib/wingman/: __init__.py
src/sshine/core/: config.py  db.py  hwid.py  keychain.py  storage.py
src/sshine/crypto/: aes.py
src/sshine/ssh/: connect.py  keygen.py
src/sshine/templates/: runner.py  schema.py
